UserStore.log
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:24: error: cannot find symbol
        int hash = hash(u.getId());
                         ^
  symbol:   method getId()
  location: variable u of type ListElement<User>
  where User is a type-variable:
    User extends Object declared in class IntegratedSortedListAndHashMap
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:35: error: cannot find symbol
            Date UserJoined = u.getValue().getDateJoined();
                                          ^
  symbol:   method getDateJoined()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:36: error: cannot find symbol
            if(ptr.getValue().getDateJoined().before(UserJoined)){
                             ^
  symbol:   method getDateJoined()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:43: error: cannot find symbol
                if(ptr.getValue().getDateJoined().before(UserJoined)){
                                 ^
  symbol:   method getDateJoined()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:63: error: cannot find symbol
        while(ptr != null && ptr.getValue().getDateJoined().before(dateBefore)) {
                                           ^
  symbol:   method getDateJoined()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:74: error: cannot find symbol
            if (ptr.getValue().getName().contains(query)){
                              ^
  symbol:   method getName()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:86: error: cannot find symbol
            if (ptr.getValue().getId()==uid) {
                              ^
  symbol:   method getId()
  location: class Object
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:95: error: cannot find symbol
        ListElement<E> ptr = head;
                    ^
  symbol:   class E
  location: class IntegratedSortedListAndHashMap<User>
  where User is a type-variable:
    User extends Object declared in class IntegratedSortedListAndHashMap
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:108: error: cannot find symbol
        Comparator<User> c = new Comparator<User>(){
        ^
  symbol:   class Comparator
  location: class IntegratedSortedListAndHashMap<User>
  where User is a type-variable:
    User extends Object declared in class IntegratedSortedListAndHashMap
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:108: error: cannot find symbol
        Comparator<User> c = new Comparator<User>(){
                                 ^
  symbol:   class Comparator
  location: class IntegratedSortedListAndHashMap<User>
  where User is a type-variable:
    User extends Object declared in class IntegratedSortedListAndHashMap
.\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java:123: error: generic array creation
        User[] tmp = new User[this.count];
                     ^
.\uk\ac\warwick\java\cs126\services\MyLinkedList.java:74: error: generic array creation
        E[] tmp = new E[this.size()];
                  ^
Note: .\uk\ac\warwick\java\cs126\services\IntegratedSortedListAndHashMap.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
12 errors
